@@ -1,0 +1,7 @@
+Source: blah
+Build-Depends: debhelper-compat (= 12)
+
+Package: blah
+Pre-Depends: ${misc:Pre-Depends}
+Description: description
+ longer description
