@@ -4,6 +4,7 @@ lintian-brush (0.48) UNRELEASED; urgency=medium
     package stanzas.
   * Handle commented out patches in patch-file-present-but-not-mentioned-
     in-series.
+  * Add fixer for skip-systemd-native-flag-missing-pre-depends.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 15 Dec 2019 17:20:33 +0000
 
